# ruhao-trading-software

./: README.md  build-on-demand.sh  cleanup-after-build.sh  package.json
.github/workflows/: build-windows.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
